header overflow fix

--- a/Full Project/css/header.css
+++ b/Full Project/css/header.css
@@ -69,10 +69,10 @@
   display: block;
 }
 
-.header__burger_btn:active + .header__menu_list {
+/* .header__burger_btn:active + .header__menu_list {
   right: 0px;
   display: block;
-}
+} */
 
 .header__menu_list {
   position: absolute;
@@ -220,6 +220,10 @@
 
 
 @media screen and (min-width: 768px) {
+  .header__introduction {
+    overflow-x: visible;
+  }
+
   .header__header {
     background-color: #fff;
     margin-bottom: 156px;
